# semester_1

./: README.md  manage.py  pyproject.toml
migrations/versions/: f2a96209defd_kinda_fun.py
semester_1/: __init__.py  auth.py  create_db.py  models.py  views.py
semester_1/static/: style.css
semester_1/templates/: base.html  create_group.html  create_thread.html  group.html  groups.html  index.html  login.html  profile.html  register.html  thread.html
tests/: test_semester_1.py
